backend/coverage_report.txt
time="2026-03-07T16:01:46+05:30" level=warning msg="Found orphan containers ([sonarqube sonarqube_db]) for this project. If you removed or renamed this service in your compose file, you can run this command with the --remove-orphans flag to clean it up."
 Container uber_zookeeper Running 
 Container uber_kafka Running 
 Container uber_postgres Running 
 Container uber_redis Running 
 Container uber_postgres Waiting 
 Container uber_postgres Healthy 
 Container uber-backend-backend-run-6f3ef42140c3 Creating 
 Container uber-backend-backend-run-6f3ef42140c3 Created 
============================= test session starts ==============================
platform linux -- Python 3.11.15, pytest-9.0.2, pluggy-1.6.0 -- /usr/local/bin/python3.11
cachedir: .pytest_cache
django: version: 5.2.12, settings: config.settings (from env)
rootdir: /app
configfile: pytest.ini
testpaths: tests
plugins: anyio-4.12.1, asyncio-1.3.0, cov-7.0.0, django-4.12.0
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 551 items / 1 error

==================================== ERRORS ====================================
_ ERROR collecting tests/unit/tracking/test_driver_location_consumer_final.py __
/usr/local/lib/python3.11/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/usr/local/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/local/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
/usr/local/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/local/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/local/lib/python3.11/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/app/tests/unit/tracking/test_driver_location_consumer_final.py", line 140
E       assert mock_delete.called  ):
E                                  ^
E   SyntaxError: unmatched ')'
=========================== short test summary info ============================
ERROR tests/unit/tracking/test_driver_location_consumer_final.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 3.85s ===============================

